Service rest, ajout organisation fonctionnel

--- a/demo-3/src/main/resources/templates/vueJs/test.html
+++ b/demo-3/src/main/resources/templates/vueJs/test.html
@@ -5,6 +5,10 @@
 
     <v-btn @click="update" color="success">Modifier</v-btn>
     
+    <br>
+    
+    <input v-model= inputValue placeholder="Ecrire la">
+    
     <v-btn @click="testAjax" color="warning">TestAjax</v-btn>
     
      <v-alert
