--- a/demo-3/src/main/resources/templates/footer.html
+++ b/demo-3/src/main/resources/templates/footer.html
@@ -5,6 +5,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.7/vue.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vuetify/1.5.3/vuetify.min.js"></script>
 
+<script src="/vueJS/m-confirm-button.js"></script>
+<script src="/vueJS/m-data-table.js"></script>
+
 {{{vue}}}
 
 </body>
