--- a/gestion-script/src/main/resources/templates/users/login.html
+++ b/gestion-script/src/main/resources/templates/users/login.html
@@ -1,11 +1,11 @@
 {{>header}}
 
 
-<div class="ui middle aligned center aligned grid">
+<div class="ui three aligned center aligned grid">
   <div class="column">
     <h2 class="ui teal image header">
       <div class="content">
-        Log-in to your account
+		Connectez-vous
       </div>
     </h2>
     <form action="/user/loginUser" method="post" class="ui large form">
@@ -13,13 +13,13 @@
         <div class="field">
           <div class="ui left icon input">
             <i class="user icon"></i>
-            <input type="text" name="email" placeholder="E-mail address">
+            <input type="text" name="email" placeholder="E-mail address" value="a@a.fr">
           </div>
         </div>
         <div class="field">
           <div class="ui left icon input">
             <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="Password">
+            <input type="password" name="password" placeholder="Password" value="az">
           </div>
         </div>
         <button class="ui fluid large teal submit button">Login</button>
@@ -29,9 +29,7 @@
 
     </form>
 
-    <div class="ui message">
-      New to us? <a href="#">Sign Up</a>
-    </div>
+ 
   </div>
 </div>
 
