--- a/gestion-script/src/main/resources/templates/scripts/new.html
+++ b/gestion-script/src/main/resources/templates/scripts/new.html
@@ -1,3 +1,52 @@
 {{>header}}
 
+<form class="ui form" action="/script/submit" method="POST">
+	<div class="field">
+		<label>Titre</label> <input type="text" name="title"
+			placeholder="Mon super script">
+	</div>
+	<div class="field">
+		<label>Description</label> <input type="text" name="description"
+			placeholder="Un script permettant de devenir genial">
+	</div>
+	<div class="field">
+
+		<label for="categorie">Categorie</label>
+		
+			<select name="categorie">
+				{{#categories}}
+					<option value="{{id}}">{{name}}</option> 
+				{{/categories}}
+			</select>
+	</div>
+	
+	<div class="field">
+	
+		<label for="langage">Langage</label> 
+		
+		<select name="langage">
+			{{#langages}}
+				<option value="{{id}}">{{name}}</option> 
+			{{/langages}}
+		</select>
+	</div>
+	<div class="field">
+		<label>Contenu</label>
+		<textarea name="content" placeholder="Deviens genial"></textarea>
+	</div>
+	<button type="submit" class="ui animated button green" tabindex="0">
+	<div class="visible content">Ajouter</div>
+	<div class="hidden content">
+		<i class="save icon"></i>
+	</div>
+</button>
+	
+<a class="ui animated button red" tabindex="0" href="../index">
+	<div class="visible content">Annuler</div>
+	<div class="hidden content">
+		<i class="long arrow alternate left icon"></i>
+	</div>
+</a>
+</form>
+
 {{>footer}}
